--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -10,9 +10,6 @@
   box-sizing: inherit;
 }
 
-/*
- * Global layout stuff
- */
 
 nav {
   width: 100%;
@@ -24,6 +21,8 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  z-index: 1;
+  
 }
 
 p {
@@ -48,7 +47,6 @@ i {
   color: red;
 }
 
-
-/*
- * Additional CSS can be defined below or in other CSS files, as per instructions
- */
+header {
+  z-index: 0;
+}
