--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,14 +1,3 @@
-/*
- * http://www.paulirish.com/2012/box-sizing-border-box-ftw/
- * https://css-tricks.com/international-box-sizing-awareness-day/
- * Do not modify these two selectors, please
- */
- html {
-  box-sizing: border-box;
-}
-*, *:before, *:after {
-  box-sizing: inherit;
-}
 
 header {
   height: 400px;
@@ -16,6 +5,7 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;  
-  background-color: #050014;
-  background-image: url("https://www.transparenttextures.com/patterns/polaroid.png");
+  background-color: #141314;
+background-image: url("https://www.transparenttextures.com/patterns/paper-fibers.png");
+  color: #fff;
 }
