--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -18,10 +18,17 @@ body {
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
-  font-family: 'Source Sans Pro', sans-serif, Sans-Serif;
+  font-family: 'Source Sans Pro', Sans-Serif;
 }
-
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+ .container {
+  background-color: #f4f1ec;
+  margin-left: 5%;
+  margin-right: 5%;
+  display: flex;
+  flex-direction: column;
+}
