--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,15 +1,3 @@
-/*
- * http://www.paulirish.com/2012/box-sizing-border-box-ftw/
- * https://css-tricks.com/international-box-sizing-awareness-day/
- * Do not modify these two selectors, please
- */
- html {
-  box-sizing: border-box;
-}
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-
 
 nav {
   width: 100%;
@@ -25,10 +13,6 @@ nav {
   
 }
 
-p {
-  margin: 0;
-}
-
 span {
   font-family: 'Bungee', cursive;
 }
@@ -41,6 +25,10 @@ em {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.quote-wording {
+  margin: 0;
 }
 
 i {
