--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,11 +1,11 @@
 
-header {
+.profile-header {
   height: 400px;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;  
   background-color: #141314;
-background-image: url("https://www.transparenttextures.com/patterns/paper-fibers.png");
+  background-image: url("https://www.transparenttextures.com/patterns/paper-fibers.png");
   color: #fff;
 }
