--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -8,4 +8,5 @@
   background-color: #141314;
   background-image: url("https://www.transparenttextures.com/patterns/paper-fibers.png");
   color: #fff;
+  margin-top: 120px; /* Add a top margin to avoid content overlay */
 }
