--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,6 +1,8 @@
 
 nav {
-  width: 100%;
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  width: 100%; /* Full width */
   height: 120px;
   color: #FFFFFF;
   background-color: #4056A1 ;
