--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -2,6 +2,7 @@ label {
   font-weight: 600;
 }
 
+
 textarea {
   background-color: #f4f1ec;
   border-style: none;
@@ -29,4 +30,24 @@ button {
 
 .red {
   color: red;
+}
+
+.error-message {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  background-color: #fce4e4;
+  border: 1px solid #fcc2c3;
+  float: left;
+  padding: 20px 30px;
+  margin-bottom: 8px;
+}
+
+.error-text {
+  color: #cc0033;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 13px;
+  font-weight: bold;
+  line-height: 20px;
+  text-shadow: 1px 1px rgba(250,250,250,.3);
 }
