--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -7,5 +7,9 @@
   background-color: #141314;
   background-image: url("https://www.transparenttextures.com/patterns/paper-fibers.png");
   color: #fff;
-  margin-top: 120px; /* Add a top margin to avoid content overlay */
+  margin-top: 120px; /* Add a top margin of nav height to avoid content overlay */
+}
+
+.profile-image {
+  padding-top: 20px;
 }
