--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -19,6 +19,7 @@ body {
   background-color: #f4f1ec;
   font-size: 24px;
   font-family: 'Source Sans Pro', Sans-Serif;
+  
 }
 
 /*
@@ -31,5 +32,49 @@ body {
   margin-right: 5%;
   display: flex;
   flex-direction: column;
-  margin-top: 12px;
+  margin-top: 120px; /* Add a top margin of nav height to avoid content overlay */
+}
+
+.columns {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  /* create space between columns and nav and walls of viewport*/
+  margin: 120px 80px;
+}
+
+.left-column {
+  flex-grow: 0.5;
+}
+
+@media (max-width: 720px) {
+
+  header {
+    margin-top: 0;
+    z-index: 1;
+  }
+
+  nav {
+    background-color: transparent;
+    position: absolute;
+  }
+
+  .left-column {
+    width: 100%;
+  }
+
+  .columns {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+  }
+
+  .right-column {
+    margin: 40px;
+  }
+
+  .profile-header.mobile-transparent-top {
+    margin-top: 0;
+  }
+
 }
